--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "feather-icons": "^4.28.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
